--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="header">
             <h1>Kuro</h1>
-            <div class="warning">Made by Wet Dream Boy，Kuro提醒：仅供学习交流使用，请支持正版音乐奥！</div>
+            <div class="warning">Made by DevKuro，Kuro提醒：仅供学习交流使用，请支持正版音乐奥！</div>
             <div class="theme-switch-wrapper">
                 <button id="themeToggleButton" class="theme-toggle-button" type="button" aria-label="切换深浅色模式">
                     <i class="fas fa-sun theme-icon theme-icon--sun" aria-hidden="true"></i>
