--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Kuro</title>
-    <meta name="apple-mobile-web-app-title" content="Kuro">
+    <title>DevKuro</title>
+    <meta name="apple-mobile-web-app-title" content="DevKuro">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <link rel="shortcut icon" href="/favicon.png">
@@ -76,7 +76,7 @@
             <button class="mobile-toolbar__button" id="mobileExploreButton" type="button" aria-label="探索雷达">
                 <i class="fas fa-satellite-dish" aria-hidden="true"></i>
             </button>
-            <div class="mobile-toolbar__title" id="mobileToolbarTitle">Kuro</div>
+            <div class="mobile-toolbar__title" id="mobileToolbarTitle">DevKuro</div>
             <div class="mobile-toolbar__actions">
                 <button class="mobile-toolbar__button" id="mobileSearchToggle" type="button" aria-label="打开搜索">
                     <i class="fas fa-search" aria-hidden="true"></i>
@@ -84,8 +84,8 @@
             </div>
         </div>
         <div class="header">
-            <h1>Kuro</h1>
-            <div class="warning">Made by DevKuro，Kuro提醒：仅供学习交流使用，请支持正版音乐奥！</div>
+            <h1>DevKuro</h1>
+            <div class="warning">Made by DevKuro，DevKuro提醒：仅供学习交流使用，请支持正版音乐奥！</div>
             <div class="theme-switch-wrapper">
                 <button id="themeToggleButton" class="theme-toggle-button" type="button" aria-label="切换深浅色模式">
                     <i class="fas fa-sun theme-icon theme-icon--sun" aria-hidden="true"></i>
